! Fixed 'file not found' errors not actually showing the filename. (ManageErrors.php)
! Ajax requests didn't return any parseable HTML when errors occurred. (Errors.php, Errors.template.php)

* Try to minimize gaps between membergroup IDs if deleting groups right after creating them. (Subs-Membergroups.php)

- Don't show your avatar in the sidebar if you're a guest. Duh. (index.css)

! Fixed (hopefully without introducing new issues on other browsers..?) a scrollbar problem on pages that were shorter than the window height. (index.css)

--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -50,13 +50,14 @@
 ------------------------------------------------------- */
 
 html
-	min-height: 100%
+	height: 100%
 	overflow-y: scroll
 	background: #369																			// For old browsers...
 	background: fixed linear-gradient(45deg, #505b66, #a0a6ab 500px, #505b66 1000px, #505b66)	// Fallback background for browsers that support linear gradients...
 	background: radial-gradient(circle at 50% 40%, #eee, #012)									// And this is the one we want. Phew...
 
 body
+	height: 100%
 	color: #ccc
 	font: $main_font_size $main_font
 	margin: 0
@@ -134,6 +135,7 @@ body
 ------------------------------------------------------- */
 
 #wedge
+	min-height: 100%
 	max-width: 1240px
 	border-radius: $radius
 	margin: auto
@@ -198,11 +200,13 @@ body
 
 #userbox extends .clearfix
 	margin: 1em 0
-	img.avatar
-		float: right
-		margin: 0 .2em 0 1em
-		padding: 0
-		$max-width: 70px
+	@if member
+		img.avatar
+			float: right
+			margin: 0 .2em 0 1em
+			padding: 0
+			$max-width: 70px
+	@endif
 	p
 		margin: 0 0 2px
 	p.now
